--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body class="page">
     <main class="container">
+
         <header class="header">
             <h1 class="header__title">Soundboard</h1>
             <div class="toggle">
-                <span class="toggle__text">Dark Mode</span>
+                <span class="toggle__text"></span>
                 <label class="toggle__label">
                     <input type="checkbox" id="toggleDarkMode" class="toggle__input">
                     <span class="toggle__slider"></span>
@@ -19,6 +20,12 @@
             </div>
         </header>
         <section class="soundboard" id="soundboard"></section>
+        <div class="background-layer">
+            <div class="background-layer" id="bg1"></div>
+            <div class="background-layer" id="bg2"></div>
+            <div class="background-layer" id="bg3"></div>
+        </div>
+
     </main>
     <script src="./js/sounds.js"></script>
 </body>
