--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soundboard</title>
+    <title>Ballie soundboard</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="page">
@@ -24,6 +24,8 @@
             <div class="background-layer" id="bg1"></div>
             <div class="background-layer" id="bg2"></div>
             <div class="background-layer" id="bg3"></div>
+            <div class="background-layer" id="bg4"></div>
+            <div class="background-layer" id="bg5"></div>
         </div>
 
     </main>
